// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elaborateMatch can do another 1`] = `
[
  {
    "field": {
      "displayName": "ID",
      "jsonPath": "$PREFIXED_ID",
    },
    "score": 109.1,
    "str": "SO:0000001",
    "term": {
      "id": "http://purl.obolibrary.org/obo/SO_0000001",
      "lbl": "region",
      "meta": {
        "basicPropertyValues": [
          {
            "pred": "http://www.geneontology.org/formats/oboInOwl#hasOBONamespace",
            "val": "sequence",
          },
        ],
        "definition": {
          "val": "A sequence_feature with an extent greater than zero. A nucleotide region is composed of bases and a polypeptide region is composed of amino acids. It may also be termed a region of some number of nucleotides.",
          "xrefs": [
            "SO:ke",
          ],
        },
        "subsets": [
          "http://purl.obolibrary.org/obo/so#SOFA",
        ],
        "synonyms": [
          {
            "pred": "hasExactSynonym",
            "val": "sequence",
          },
        ],
      },
      "type": "CLASS",
    },
    "wordMatches": [
      {
        "position": 0,
        "wordIndex": 0,
      },
    ],
  },
]
`;

exports[`elaborateMatch can do one 1`] = `
[
  {
    "field": {
      "displayName": "definition",
      "jsonPath": "$.meta.definition.val",
    },
    "score": 208.39346153846154,
    "str": "A sequence_feature with an extent greater than zero. A nucleotide region is composed of bases and a polypeptide region is composed of amino acids. It may also be termed a region of some number of nucleotides.",
    "term": {
      "id": "http://purl.obolibrary.org/obo/SO_0000001",
      "lbl": "region",
      "meta": {
        "basicPropertyValues": [
          {
            "pred": "http://www.geneontology.org/formats/oboInOwl#hasOBONamespace",
            "val": "sequence",
          },
        ],
        "definition": {
          "val": "A sequence_feature with an extent greater than zero. A nucleotide region is composed of bases and a polypeptide region is composed of amino acids. It may also be termed a region of some number of nucleotides.",
          "xrefs": [
            "SO:ke",
          ],
        },
        "subsets": [
          "http://purl.obolibrary.org/obo/so#SOFA",
        ],
        "synonyms": [
          {
            "pred": "hasExactSynonym",
            "val": "sequence",
          },
        ],
      },
      "type": "CLASS",
    },
    "wordMatches": [
      {
        "position": 55,
        "wordIndex": 0,
      },
      {
        "position": 66,
        "wordIndex": 1,
      },
      {
        "position": 112,
        "wordIndex": 1,
      },
      {
        "position": 171,
        "wordIndex": 1,
      },
      {
        "position": 196,
        "wordIndex": 0,
      },
    ],
  },
]
`;

exports[`getWords can get the words from a test node 1`] = `
[
  [
    "$PREFIXED_ID",
    "so:0000001",
  ],
  [
    "$.lbl",
    "region",
  ],
  [
    "$.meta.definition.val",
    "sequence",
  ],
  [
    "$.meta.definition.val",
    "feature",
  ],
  [
    "$.meta.definition.val",
    "extent",
  ],
  [
    "$.meta.definition.val",
    "greater",
  ],
  [
    "$.meta.definition.val",
    "zero",
  ],
  [
    "$.meta.definition.val",
    "nucleotide",
  ],
  [
    "$.meta.definition.val",
    "region",
  ],
  [
    "$.meta.definition.val",
    "composed",
  ],
  [
    "$.meta.definition.val",
    "bases",
  ],
  [
    "$.meta.definition.val",
    "polypeptide",
  ],
  [
    "$.meta.definition.val",
    "region",
  ],
  [
    "$.meta.definition.val",
    "composed",
  ],
  [
    "$.meta.definition.val",
    "amino",
  ],
  [
    "$.meta.definition.val",
    "acids",
  ],
  [
    "$.meta.definition.val",
    "may",
  ],
  [
    "$.meta.definition.val",
    "also",
  ],
  [
    "$.meta.definition.val",
    "termed",
  ],
  [
    "$.meta.definition.val",
    "region",
  ],
  [
    "$.meta.definition.val",
    "number",
  ],
  [
    "$.meta.definition.val",
    "nucleotides",
  ],
  [
    "$.meta.synonyms[*].val",
    "sequence",
  ],
]
`;
